bk_ida/gccida/g2/schedule_insns
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/schedule_insns/src/sched-rgn.c:3392:1: error: use of undeclared identifier 'deps_0'
deps_0 *v5; // rdx 
^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/schedule_insns/src/sched-rgn.c:3392:9: error: use of undeclared identifier 'v5'
deps_0 *v5; // rdx 
        ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/schedule_insns/src/sched-rgn.c:3396:1: error: use of undeclared identifier 'deps_0'
deps_0 *v9; // rdi 
^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/schedule_insns/src/sched-rgn.c:3396:9: error: use of undeclared identifier 'v9'
deps_0 *v9; // rdi 
        ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/schedule_insns/src/sched-rgn.c:3425:1: error: use of undeclared identifier 'deps_0'
deps_0 *v39; // rdi 
^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/schedule_insns/src/sched-rgn.c:3425:9: error: use of undeclared identifier 'v39'
deps_0 *v39; // rdi 
        ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/schedule_insns/src/sched-rgn.c:3438:1: error: use of undeclared identifier 'deps_0'
deps_0 *v52; // rdi 
^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/schedule_insns/src/sched-rgn.c:3438:9: error: use of undeclared identifier 'v52'
deps_0 *v52; // rdi 
        ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/schedule_insns/src/sched-rgn.c:3467:1: error: use of undeclared identifier 'deps_0'
deps_0 *v81; // rax 
^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/schedule_insns/src/sched-rgn.c:3467:9: error: use of undeclared identifier 'v81'
deps_0 *v81; // rax 
        ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/schedule_insns/src/sched-rgn.c:3699:4: error: expected ';' after expression
rtx headp; // [rsp+A0h] [rbp-B8h] BYREF 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/schedule_insns/src/sched-rgn.c:3699:5: error: use of undeclared identifier 'headp'
rtx headp; // [rsp+A0h] [rbp-B8h] BYREF 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/schedule_insns/src/sched-rgn.c:3700:4: error: expected ';' after expression
rtx tail; // [rsp+A8h] [rbp-B0h] BYREF 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/schedule_insns/src/sched-rgn.c:3700:5: error: use of undeclared identifier 'tail'; did you mean 'tailp'?
rtx tail; // [rsp+A8h] [rbp-B0h] BYREF 
    ^~~~
    tailp
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/schedule_insns/src/sched-rgn.c:3689:10: note: 'tailp' declared here
sbitmap *tailp; // [rsp+58h] [rbp-100h] 
         ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/schedule_insns/src/sched-rgn.c:3701:7: error: expected ';' after expression
deps_0 v315; // [rsp+B0h] [rbp-A8h] BYREF 
      ^
      ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/schedule_insns/src/sched-rgn.c:3701:1: error: use of undeclared identifier 'deps_0'
deps_0 v315; // [rsp+B0h] [rbp-A8h] BYREF 
^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/schedule_insns/src/sched-rgn.c:3701:8: error: use of undeclared identifier 'v315'
deps_0 v315; // [rsp+B0h] [rbp-A8h] BYREF 
       ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/schedule_insns/src/sched-rgn.c:4123:10: error: use of undeclared identifier 'tail'; did you mean 'tailp'?
LODWORD( tail) = 1; 
         ^~~~
         tailp
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/schedule_insns/src/sched-rgn.c:3113:27: note: expanded from macro 'LODWORD'
#define LODWORD(x) DWORDn(x,LOW_IND(x,_DWORD))
                          ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/schedule_insns/src/sched-rgn.c:3076:36: note: expanded from macro 'DWORDn'
#define DWORDn(x, n) (*((_DWORD*)&(x)+n))
                                   ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/schedule_insns/src/sched-rgn.c:3689:10: note: 'tailp' declared here
sbitmap *tailp; // [rsp+58h] [rbp-100h] 
         ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/schedule_insns/src/sched-rgn.c:4124:10: error: use of undeclared identifier 'v315'
LODWORD( v315.pending_read_insns) = h_i_d[*( int *)( v242 + 8)].luid - h_i_d[*( int *)( v243 + 8)].luid; 
         ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/schedule_insns/src/obj/sched-rgn.o] Error 1
